# dos14-Labzeev_Timofey-git-flow

./: .gitignore  Bank_Hard%.py  Dockerfile  Dockerfile.certbot  Dockerfile.nginx  Dockerfile.nginx-cert  Dockerfile.postgres  Dockerfile.script  Jenkinsfile  README.md  account.csv  app.service.j2  bank_server.conf  check_and_create_DB.py  credits_deposits.json  credits_deposits.yaml  deploy.yaml  deposit.yaml  docker-compose.yaml  inventory.ini  main.py  nginx.conf  playbook.yaml  pyproject.toml  secrets.yml  setup_certificates.sh  transactions.csv
ansible/: playbook.yaml
ansible/roles/bank/tasks/: main.yaml
ansible/roles/docker/tasks/: main.yaml
ansible/roles/pyenv/tasks/: main.yaml
lesson15/: README.md  pyproject.toml
nginx/: bank_server.conf  entrypoint.sh  nginx-cert.conf  nginx.conf  nginx.template.conf
roles/bank/tasks/: main.yaml
roles/clone repo/tasks/: main.yaml
roles/docker-compose/tasks/: main.yaml
roles/docker/tasks/: main.yaml
roles/git/tasks/: main.yaml
roles/other/tasks/: main.yaml
roles/other/templates/: app.service.j2
roles/postgres/tasks/: main.yaml
roles/pyenv/tasks/: main.yaml
roles/ssl/tasks/: main.yaml
templates/: app.service.j2
